-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.0.0-rc1
-
None
The default JAVA_HOME detected on Mac OS X is wrong.
It is:
/System/Library/Frameworks/JavaVM.framework/Versions/A
It should be
/System/Library/Frameworks/JavaVM.framework/Versions/CurrentJDK/Home
This makes ant fail when building.
- is required for
-
QTBUG-33305 Issues to be fixed before Qt5.2 Beta1 release
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-10241 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 67573,2 | Android: Detect JAVA_HOME by looking for libs/tools.jar | 3.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |