Android: Detect JAVA_HOME by looking for libs/tools.jar

Task-number: QTCREATORBUG-10241
Change-Id: I8245547f851174314b99bde857f257692ed35bfb
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@digia.com>